--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -21,5 +21,6 @@ include ../mixins.pug
       //-     label(for="end-date" class="label") выезд
       //-     input( type="text" name="end-date" id="end-date" placeholder="ДД.ММ.ГГГГ" class="input-date")
         
-
-      button(type="button" class="btn btn-width-violet form__search__btn") подобрать номер
+      a(href="filter-page.html")
+         button(type="button" class="btn btn-width-violet form__search__btn") подобрать номер
+      
