--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -13,4 +13,4 @@ nav(class="container menu")
     +list('Новости')
     +list('Соглашения')
     +button-signin-header('Войти', 'signin-page.html', "header__btn--signin" )
-    +button-signup('Зарегистрироватьcя').header__btn--signup
+    +button-signup('Зарегистрироватьcя', 'signup-page.html').header__btn--signup
