--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -6,8 +6,7 @@ div(class="information")
             //- img(src=require("./images/mainA.jpg") class="bigImg")
     div(class="information_bottom-part row" class="container")
         div(class="bottom-part__left")
-
-            div(class="row row-flex")
+            div(class="row room__information--info")
                 .blocks
                     h3(class="title information__title") Сведения о номере
                     +room-information("mood", "Комфорт", "Шумопоглощающие стены", " information__border") 
