--- a/src/index.pug
+++ b/src/index.pug
@@ -30,3 +30,4 @@ html(lang="en")
             //- include components/filter-page/filter-page.pug
             //- include components/form-register/form-register.pug
             //- include blocks/input-dates/input-dates.pug
+            include components/info-page/info-page.pug
