--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -19,3 +19,23 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+  .calculator {
+    width: 400px;
+    height: 600px;
+  }
+
+  
+.calculator__container{
+  margin: 5px;
+}
+
+.calculator__container p {
+  font-size: 16px;
+}
+.calculator__total{
+  font-size: 16px;
+  font-weight: bold;
+} 
+}
