--- a/src/blocks/input-dates/input-dates.scss
+++ b/src/blocks/input-dates/input-dates.scss
@@ -2,8 +2,8 @@
     display: inline-block;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
-    width: 390px;
-    height: 60px;
+    width: 395px;
+    height: 65px;
     margin-top: 5px;
     font-style: normal;
     font-weight: normal;
@@ -11,4 +11,15 @@
     line-height: 18px;
     color: $color-standart;
     margin-bottom:35px;
+}
+
+
+@media only screen and (max-width: 900px) {
+    .container{
+        width: 100%;
+    }
+    .input-dates{
+        width: 315px;
+    }
+
 }
