--- a/src/blocks/littleDropdown/littleDropdown.scss
+++ b/src/blocks/littleDropdown/littleDropdown.scss
@@ -8,8 +8,8 @@
     display: inline-block;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
-    width: 390px;
-    height: 60px;
+    width: 395px;
+    height: 65px;
     margin-top: 5px;
     font-style: normal;
     font-weight: normal;
@@ -125,4 +125,15 @@
     border: none;
     background: transparent;
     outline: none;
+  }
+
+
+  @media only screen and (max-width: 600px) {
+    .little-dropdowns .dd-button {
+      display: inline-block;
+      border: 1px solid rgba(31, 32, 65, 0.25);
+      border-radius: 4px;
+      width: 310px;
+      height: 55px;
+    }
   }
