--- a/src/components/components-page/components-page.scss
+++ b/src/components/components-page/components-page.scss
@@ -95,22 +95,22 @@
     content: "\2714";
     border-radius: 0.2em;
     display: inline-block;
-    width: 27px;
-    height: 27px;
+    width: 29px;
+    height: 29px;
     vertical-align: bottom;
     color: transparent;
     transition: 0.2s;
     border: $border-state;
     box-sizing: border-box;
     border-radius: 4px;
-    margin-right: 12px;
+    margin-right: 14px;
     padding-left: 5px;
   }
 }
 
-.checkbox__name{
-  font-size: 18px;
-  letter-spacing: .5px;
+.checkbox__name {
+  font-size: 20px;
+  letter-spacing: 0.5px;
 }
 
 .checkbox__box {
@@ -127,7 +127,7 @@
 
 .checkbox__name__descr {
   font-weight: bold;
-  letter-spacing: .9px;
+  letter-spacing: 0.9px;
   margin-top: -3px;
 }
 
@@ -218,7 +218,7 @@
     }
     & h4 {
       margin-block-start: 1em;
-      margin-block-end: 0.40em;
+      margin-block-end: 0.4em;
       font-size: 19.2px;
       font-weight: bold;
       margin-left: -14px;
@@ -274,7 +274,7 @@
 
 #slider-range {
   position: relative;
-  width: 350px;
+  width: 395px;
   height: 6px;
   background-color: white;
 }
@@ -303,4 +303,96 @@
 
 #slider-range .ui-widget-header {
   background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+}
+
+@media only screen and (max-width: 600px) {
+  .bullet-list {
+    > li {
+      list-style: none;
+      position: relative;
+      padding: 0 0 0 1.7em;
+      transition: 0.12s;
+      font-size: 16px;
+
+      &::before {
+        position: absolute;
+        content: "\2022";
+        font-family: Arial;
+        color: grey;
+        top: -7px;
+        left: 5px;
+        text-align: center;
+        font-size: 28px;
+        opacity: 0.5;
+        line-height: 1;
+        transition: 0.5s;
+      }
+    }
+  }
+
+  .room__feedback__wrapper {
+    &__person {
+      display: flex;
+      flex-direction: row;
+      margin-left: -15px;
+      margin-top: -7px;
+      & img {
+        width: 120px;
+        height: 120px;
+      }
+      & h4 {
+        margin-block-start: 1em;
+        margin-block-end: 0.4em;
+        font-size: 17px;
+        font-weight: bold;
+        margin-left: -14px;
+      }
+      & p {
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        font-size: 14px;
+        font-weight: 300;
+        margin-left: -14px;
+      }
+    }
+    &__evaluation {
+      display: flex;
+      margin-top: -24px;
+      & p {
+        margin-left: 27px;
+        margin-top: -2px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 32px;
+      }
+      & button {
+        width: 70px;
+        height: 27px;
+        background: #ffffff;
+        border: 1px solid rgba(31, 32, 65, 0.25);
+        box-sizing: border-box;
+        border-radius: 25px;
+        outline: none;
+        color: rgba(31, 32, 65, 0.25);
+        margin-left: 17px;
+        & span {
+          margin-left: 5px;
+        }
+        &:hover {
+          color: #bc9cff;
+          transform: scale(1.2);
+          border-color: #bc9cff;
+          span {
+            opacity: 1;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 10px;
+            line-height: 12px;
+            /* identical to box height */
+            padding-top: 5px;
+          }
+        }
+      }
+    }
+  }
 }
