--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -1,8 +1,8 @@
-
 @mixin logo {
   background-image: url(../images/Logo.svg);
   background-repeat: no-repeat;
-  width: 140px; height: 55px;
+  width: 140px;
+  height: 55px;
   margin-top: 5px;
 }
 
@@ -21,14 +21,15 @@
     line-height: 18px;
     color: rgba(31, 32, 65, 0.25);
     padding-left: 15px;
-    &:hover{
+    &:hover {
       color: rgba(31, 32, 65, 0.75);
     }
   }
   &:hover {
     border: 1px solid rgba(31, 32, 65, 0.5);
     &::placeholder {
-      color: rgba(31, 32, 65, 0.75);}
+      color: rgba(31, 32, 65, 0.75);
+    }
   }
   &:active {
     border: 1px solid rgba(31, 32, 65, 0.5);
@@ -71,13 +72,13 @@
   font-family: "OpenSans-Bold";
   letter-spacing: 1.3px;
   border: none;
-  padding: 10px 30px;
+  padding: 15px 32px;
   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
   border-radius: 30px;
   text-transform: uppercase;
   color: $white-color;
   font-weight: bold;
-  font-size: 15.5px;
+  font-size: 17.5px;
 }
 
 @mixin title {
@@ -100,7 +101,6 @@
   font-weight: normal;
   font-size: 18px;
   letter-spacing: 0;
-
 }
 
 @mixin small-title {
@@ -145,3 +145,31 @@
   border-radius: 4px;
   display: block;
 }
+
+@mixin btn-small-violet {
+  font-family: "OpenSans-Bold";
+  letter-spacing: 1.3px;
+  border: none;
+  padding: 15px 32px;
+  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+  border-radius: 30px;
+  text-transform: uppercase;
+  color: $white-color;
+  font-weight: bold;
+  font-size: 17.5px;
+}
+
+// @media only screen and (max-width: 600px) {
+//   @mixin btn-small-violet {
+//     font-family: "OpenSans-Bold";
+//     letter-spacing: 1.3px;
+//     border: none;
+//     padding: 5px 15px;
+//     background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+//     border-radius: 30px;
+//     text-transform: uppercase;
+//     color: $white-color;
+//     font-weight: bold;
+//     font-size: 17.5px;
+//   }
+// }
