try to load code on github pages

--- a/src/index.pug
+++ b/src/index.pug
@@ -31,3 +31,4 @@ html(lang="en")
             //- include components/form-register/form-register.pug
             //- include blocks/input-dates/input-dates.pug
             include components/info-page/info-page.pug
+        script(src="src/index.js")
